#489 - allow multiple users to be selected for invitation via powerfolder.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -174,6 +174,9 @@ dialog.updatecheck.noUpdateAvailable=This version is up to date
 dialog.updatecheck.nothingNeverAsk=Nothing and Never ask again
 dialog.updatecheck.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
 dialog.updatecheck.title=Newer version available
+dialog.user_select.title=Select Users
+dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
+dialog.user_select.online_only=
 
 disablesilentmode.description=Silent mode currently active, added/modified files won't be found. Press for full mode
 disablesilentmode.key=w
@@ -383,7 +386,7 @@ freelimitdialog.reduce=Reduce usage
 freelimitdialog.title=Extensive use detected
 freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
 
-friendsearch.no_user_found=No user found
+friendsearch.no_user_found=No users found
 friendsearch.nodetable.hostname=Hostname
 friendsearch.nodetable.ip=IP
 friendsearch.nodetable.last_seen_online=Last seen online
@@ -844,6 +847,8 @@ sendinvitation.toclipboard=To clipboard...
 sendinvitation.todisk=To disk...
 sendinvitation.user.text=Select the folder you want {0} invite to
 sendinvitation.user.title=Invite {0} to a folder
+sendinvitation.no_users=No users selected
+sendinvitation.multi_users=Multiple users selected
 
 setmasternode.description=Selects the administration user for your friendlist. Friendlist loaded from adminitrator
 setmasternode.dialog.text=Select the administrator for your friendlist
