#663 - daily / weekly synchronizing.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -141,7 +141,14 @@ dialog.connection_problem=Connection problem
 dialog.customsync.autodownloadfromfriends=Autodownload from friends
 dialog.customsync.autodownloadfromother=Autodownload from others
 dialog.customsync.changedetection_disabled=Change detection disabled
+dialog.customsync.regularSync=Regular synchronization
 dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection
+dialog.customsync.dailySync=Daily synchronization
+dialog.customsync.hourDaySync=Hour / day of synchronization
+dialog.customsync.everyDay=Every day
+dialog.customsync.weekends=Weekends
+dialog.customsync.weekdays=Weekdays
+
 dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 dialog.customsync.syncprofilescombo=Default synchronization profile
@@ -449,6 +456,13 @@ general.visibility=Visibility
 general.webservice=Online Storage
 general.whatisthis=What is this?
 general.yesterday=yesterday
+general.sunday=Sunday
+general.monday=Monday
+general.tuesday=Tuesday
+general.wednesday=Wednesday
+general.thursday=Thursday
+general.friday=Friday
+general.saturday=Saturday
 
 hideoffline.description=The offline users will be filtered from this search result
 hideoffline.key=H
