all calles "Find Users"

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -270,7 +270,7 @@ filenameproblem.to_long.description=The filename is longer than 255 characters,\
 
 findfriends.description=Start searching for new friends
 findfriends.key=F
-findfriends.name=Find New Friends
+findfriends.name=Find Users
 
 folder.check_path_length.never_show_again=Do not ask this again
 folder.check_path_length.text=The combined length of the path to the file and the filename is more than 255 characters.\nThis is not recommended since this may not work on other Operating systems like Windows 2000.\n\nFolder\: {0}\nFile\: {1}
@@ -435,7 +435,7 @@ general.localnet=LAN
 general.member=Member
 general.notavailable=not available
 general.notfound=not found
-general.notonfriends=Find user
+general.notonfriends=Find Users
 general.ok=OK
 general.ok.key=O
 general.overwrite=Overwrite
@@ -763,7 +763,7 @@ quickinfo.folder.is_synchronizing=Folder is synchronizing...
 quickinfo.folder.number_of_files_and_size={0} File(s), {1}
 quickinfo.folder.status_of_folder=Status of {0}
 quickinfo.friends.online={0} of {1} friend(s) are online
-quickinfo.friends.title=Find Friends
+quickinfo.friends.title=Find Users
 quickinfo.friends.usersfound={0} users found
 quickinfo.myfolders.folders={0} in {1} Folder(s)
 quickinfo.myfolders.insyncall=All Folders are synchronized
@@ -809,7 +809,7 @@ remove_from_recycle_bin_confimation.title=Delete files?
 
 removefriend.description=Removes user from friendlist
 removefriend.key=r
-removefriend.name=Remove from Friends
+removefriend.name=Remove Friend
 
 removemodifierfriend.description=Removes the file modifier from friendlist
 removemodifierfriend.key=r
