#673 - Add Auto-clenup option on download panel.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -8,7 +8,7 @@
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our offical webpage under
+# There is also a guide on our official webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -194,6 +194,9 @@ downloadfile.failed.sourcenotfound=Unable to download file {0}, source not found
 downloadfile.key=D
 downloadfile.name=Download File(s)
 downloadfile.unable_to_download=Unable to download
+
+download_panel.auto_cleanup.name=Auto-cleanup
+download_panel.auto_cleanup.description=Cleans up any downloads when they complete
 
 empty_recycle_bin.description=Empty the PowerFolder Recycle Bin
 empty_recycle_bin.key=E
@@ -880,8 +883,8 @@ showhidefiledetails.name=Details
 
 splash.version=Version {0}
 
-startdownloads.description=Opens the selected, downloaded files
-startdownloads.key=s
+startdownloads.description=Opens the selected downloaded files
+startdownloads.key=O
 startdownloads.name=Open
 
 status.download=Down\: %.2f KB/s
