--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -668,8 +668,8 @@ preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a fre
 preferences.dialog.general.title=General
 preferences.dialog.iplanlist=LAN IP List
 preferences.dialog.language=Language
-preferences.dialog.lanlinesettings=LAN Connection speed
-preferences.dialog.linesettings=Internet Connection speed
+preferences.dialog.lanlinesettings=LAN connection speed
+preferences.dialog.linesettings=Internet connection speed
 preferences.dialog.network.title=Network
 preferences.dialog.networkmode.lanonly=LAN only
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
@@ -974,6 +974,8 @@ wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
 wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basic Setup
+wizard.basicsetup.upload.title=Unlimited connection speed
+wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.\n\nAre you sure this is correct?
 wizard.choosedisklocation.select=Select directory
 wizard.choosedisklocation.title=Disk location
 wizard.control.back=< Back
