#626 - Add patterns logic

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -27,6 +27,8 @@ aborttransfer.icon=icons/Abort.gif
 #sendinvitation.icon=icons/Chat.gif
 #reconnect.icon=icons/Connect.gif
 openfile.icon=icons/Play.gif
+addpattern.icon=icons/Pattern.gif
+settings.icon=icons/Settings.gif
 downloadfile.icon=icons/Download.gif
 deletefile.icon=icons/Delete.gif
 open_local_folder.icon=icons/Directory.gif
