--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -30,7 +30,7 @@ abortdownload.name=Abort
 
 aborttransfer.description=Aborts the selected transfer
 aborttransfer.key=a
-aborttransfer.name=Abort transfer(s)
+aborttransfer.name=Abort Transfer(s)
 
 about.description=Shows information about PowerFolder
 about.dialog.check_for_updates=Check for updates
@@ -66,6 +66,10 @@ aboutwebservice.name=About Online Storage
 addfriend.description=Adds user to friendlist
 addfriend.key=f
 addfriend.name=Add to Friends
+
+addpattern.description=Adds an ignore pattern for this file
+addpattern.key=G
+addpattern.name=Add Ignore Pattern
 
 addmodifierfriend.description=Adds the modifier of file to friendlist
 addmodifierfriend.key=f
@@ -364,13 +368,13 @@ folderpanel.hometab.total_size=Total size
 folderpanel.hometab.working.description=The folder is being moved
 folderpanel.hometab.working.title=Moving folder
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
-folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
+folderpanel.settingstab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
 folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
 folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
 folderpanel.settingstab.addbutton.key=A
 folderpanel.settingstab.addbutton.name=Add
 folderpanel.settingstab.choose_sync_profile=Choose synchronisation profile
-folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
+folderpanel.settingstab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
 folderpanel.settingstab.editbutton.description=Edit a pattern
 folderpanel.settingstab.editbutton.key=E
