--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -166,6 +166,7 @@ dialog.directorychooser.new.problem=There was a problem creating\n{0}
 dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
 dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=Fatal Error
+dialog.newdirectorycreator.title=New directory
 dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.synchronization.choose=Please choose your sync action
 dialog.synchronization.receive_changes=Receive changes
