--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -67,9 +67,9 @@ addfriend.description=Adds user to friendlist
 addfriend.key=f
 addfriend.name=Add to Friends
 
-addpattern.description=Adds an ignore pattern for this file
+addpattern.description=Adds the selected file/directory to the ignore list
 addpattern.key=G
-addpattern.name=Add Ignore Pattern
+addpattern.name=Add to Ignore List
 
 addmodifierfriend.description=Adds the modifier of file to friendlist
 addmodifierfriend.key=f
