--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -54,6 +54,108 @@ wake_up.icon=icons/toolbar/WakeUp-48.png
 sync_now.icon=icons/toolbar/Sync-48.png
 sync_now_active.icon=icons/toolbar/SyncActive-48.png
 
+# Sync icons for FolderQuickInfoPanel
+sync_0.icon=icons/sync/Sync_00.png
+sync_1.icon=icons/sync/Sync_00.png
+sync_2.icon=icons/sync/Sync_00.png
+sync_3.icon=icons/sync/Sync_00.png
+sync_4.icon=icons/sync/Sync_00.png
+sync_5.icon=icons/sync/Sync_00.png
+sync_6.icon=icons/sync/Sync_00.png
+sync_7.icon=icons/sync/Sync_0007.png
+sync_8.icon=icons/sync/Sync_0007.png
+sync_9.icon=icons/sync/Sync_0009.png
+sync_10.icon=icons/sync/Sync_0010.png
+sync_11.icon=icons/sync/Sync_0011.png
+sync_12.icon=icons/sync/Sync_0011.png
+sync_13.icon=icons/sync/Sync_0013.png
+sync_14.icon=icons/sync/Sync_0014.png
+sync_15.icon=icons/sync/Sync_0014.png
+sync_16.icon=icons/sync/Sync_0014.png
+sync_17.icon=icons/sync/Sync_0014.png
+sync_18.icon=icons/sync/Sync_0018.png
+sync_19.icon=icons/sync/Sync_0018.png
+sync_20.icon=icons/sync/Sync_0018.png
+sync_21.icon=icons/sync/Sync_0021.png
+sync_22.icon=icons/sync/Sync_0022.png
+sync_23.icon=icons/sync/Sync_0023.png
+sync_24.icon=icons/sync/Sync_0023.png
+sync_25.icon=icons/sync/Sync_0025.png
+sync_26.icon=icons/sync/Sync_0026.png
+sync_27.icon=icons/sync/Sync_0026.png
+sync_28.icon=icons/sync/Sync_0026.png
+sync_29.icon=icons/sync/Sync_0029.png
+sync_30.icon=icons/sync/Sync_0030.png
+sync_31.icon=icons/sync/Sync_0031.png
+sync_32.icon=icons/sync/Sync_0031.png
+sync_33.icon=icons/sync/Sync_0031.png
+sync_34.icon=icons/sync/Sync_0034.png
+sync_35.icon=icons/sync/Sync_0035.png
+sync_36.icon=icons/sync/Sync_0035.png
+sync_37.icon=icons/sync/Sync_0035.png
+sync_38.icon=icons/sync/Sync_0038.png
+sync_39.icon=icons/sync/Sync_0039.png
+sync_40.icon=icons/sync/Sync_0040.png
+sync_41.icon=icons/sync/Sync_0040.png
+sync_42.icon=icons/sync/Sync_0040.png
+sync_43.icon=icons/sync/Sync_0040.png
+sync_44.icon=icons/sync/Sync_0040.png
+sync_45.icon=icons/sync/Sync_0045.png
+sync_46.icon=icons/sync/Sync_0045.png
+sync_47.icon=icons/sync/Sync_0047.png
+sync_48.icon=icons/sync/Sync_0047.png
+sync_49.icon=icons/sync/Sync_0049.png
+sync_50.icon=icons/sync/Sync_0050.png
+sync_51.icon=icons/sync/Sync_0050.png
+sync_52.icon=icons/sync/Sync_0052.png
+sync_53.icon=icons/sync/Sync_0053.png
+sync_54.icon=icons/sync/Sync_0053.png
+sync_55.icon=icons/sync/Sync_0053.png
+sync_56.icon=icons/sync/Sync_0053.png
+sync_57.icon=icons/sync/Sync_0053.png
+sync_58.icon=icons/sync/Sync_0058.png
+sync_59.icon=icons/sync/Sync_0059.png
+sync_60.icon=icons/sync/Sync_0059.png
+sync_61.icon=icons/sync/Sync_0059.png
+sync_62.icon=icons/sync/Sync_0059.png
+sync_63.icon=icons/sync/Sync_0059.png
+sync_64.icon=icons/sync/Sync_0059.png
+sync_65.icon=icons/sync/Sync_0065.png
+sync_66.icon=icons/sync/Sync_0065.png
+sync_67.icon=icons/sync/Sync_0065.png
+sync_68.icon=icons/sync/Sync_0065.png
+sync_69.icon=icons/sync/Sync_0065.png
+sync_70.icon=icons/sync/Sync_0070.png
+sync_71.icon=icons/sync/Sync_0070.png
+sync_72.icon=icons/sync/Sync_0072.png
+sync_73.icon=icons/sync/Sync_0073.png
+sync_74.icon=icons/sync/Sync_0074.png
+sync_75.icon=icons/sync/Sync_0074.png
+sync_76.icon=icons/sync/Sync_0076.png
+sync_77.icon=icons/sync/Sync_0076.png
+sync_78.icon=icons/sync/Sync_0076.png
+sync_79.icon=icons/sync/Sync_0079.png
+sync_80.icon=icons/sync/Sync_0080.png
+sync_81.icon=icons/sync/Sync_0080.png
+sync_82.icon=icons/sync/Sync_0082.png
+sync_83.icon=icons/sync/Sync_0082.png
+sync_84.icon=icons/sync/Sync_0082.png
+sync_85.icon=icons/sync/Sync_0082.png
+sync_86.icon=icons/sync/Sync_0086.png
+sync_87.icon=icons/sync/Sync_0087.png
+sync_88.icon=icons/sync/Sync_0088.png
+sync_89.icon=icons/sync/Sync_0088.png
+sync_90.icon=icons/sync/Sync_0088.png
+sync_91.icon=icons/sync/Sync_0088.png
+sync_92.icon=icons/sync/Sync_0092.png
+sync_93.icon=icons/sync/Sync_0093.png
+sync_94.icon=icons/sync/Sync_0093.png
+sync_95.icon=icons/sync/Sync_0093.png
+sync_96.icon=icons/sync/Sync_0093.png
+sync_97.icon=icons/sync/Sync_0097.png
+sync_98.icon=icons/sync/Sync_0097.png
+sync_99.icon=icons/sync/Sync_0099.png
+
 # crappy button icons that don't make sense removed (for now)
 folderleave.icon=
 requestnetfolderlist.icon=
