#626 - Rework of blacklist explicits and patterns.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -67,10 +67,6 @@ addfriend.description=Adds user to friendlist
 addfriend.key=f
 addfriend.name=Add to Friends
 
-addpattern.description=Adds the selected file/directory to the ignore list
-addpattern.key=G
-addpattern.name=Add to Ignore List
-
 addmodifierfriend.description=Adds the modifier of file to friendlist
 addmodifierfriend.key=f
 addmodifierfriend.name=Add file Modifier to Friends
@@ -478,7 +474,7 @@ hideoffline.name=Hide offline users
 
 ignorefile.description=File(s) will not be downloaded/shared
 ignorefile.key=I
-ignorefile.name=Add File to Ignore
+ignorefile.name=Add File to Ignore patterns
 
 imagefileinfo.resolution=Resolution
 imagefileinfo.unknown=Unknown
@@ -811,6 +807,9 @@ remove_from_recycle_bin.description=Delete file from the PowerFolder Recycle Bin
 remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=Delete File
 
+remove_pattern.title=Remove ignore pattern
+remove_pattern.prompt=Remove ignore pattern {0}?
+
 remove_from_recycle_bin_confimation.text=Are you sure you want to delete the following file(s)?
 remove_from_recycle_bin_confimation.title=Delete files?
 
@@ -968,8 +967,8 @@ transfers.to=To
 transfers.verifying=Finalizing
 
 unignorefile.description=File(s) will be downloaded/shared again
-unignorefile.key=U
-unignorefile.name=Remove from Ignore
+unignorefile.key=R
+unignorefile.name=Remove from Ignore pattens
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
