#27 - better sync logo.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -33,7 +33,7 @@ aborttransfer.key=a
 aborttransfer.name=Abort Transfer(s)
 
 about.description=Shows information about PowerFolder
-about.dialog.check_for_updates=Check for updates
+about.dialog.check_for_updates=Check For Updates
 about.dialog.check_for_updates.key=U
 about.dialog.contributers=Contributers
 about.dialog.documentation=Documentation
@@ -41,6 +41,7 @@ about.dialog.general_information=General Information
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Professional folder sharing tool
 about.dialog.send_bug_report=Send Bug Report
+about.dialog.send_bug_report.key=B
 about.dialog.support=Support
 about.dialog.team=Team
 about.dialog.testers=Testers
@@ -608,6 +609,8 @@ openfile.name=Open File
 openwebservice.description=Opens the Online Storage in the default browser
 openwebservice.key=B
 openwebservice.name=Open in Browser
+
+percent.place.holder={0}%
 
 plugin_disable.description=Disable (and stop) Plugin
 plugin_disable.key=D
