#659 - Add hour / minute / second options to custom sync profile.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -143,7 +143,7 @@ dialog.customsync.autodownloadfromfriends=Autodownload from friends
 dialog.customsync.autodownloadfromother=Autodownload from others
 dialog.customsync.changedetection_disabled=Change detection disabled
 dialog.customsync.regularSync=Regular synchronization
-dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection
+dialog.customsync.timebetweenscans=(Maximum) time until change detection
 dialog.customsync.dailySync=Daily synchronization
 dialog.customsync.hourDaySync=Hour / day of synchronization
 dialog.customsync.everyDay=Every day
@@ -432,11 +432,13 @@ general.friendlist=Friendlist
 general.from=from
 general.help=help
 general.hide=hide
+general.hours=Hour(s)
 general.inet=Internet
 general.localcopyat=Local copy at
 general.localcopyplace=Choose a place for local copy
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
+general.minutes=Minute(s)
 general.member=Member
 general.notavailable=not available
 general.notfound=not found
@@ -447,6 +449,7 @@ general.overwrite=Overwrite
 general.overwrite_all=Overwrite all
 general.powerfolder=PowerFolder
 general.recyclebin=Recycle Bin
+general.seconds=Second(s)
 general.show=show
 general.show_never_again=Do not show this message again
 general.size=Size
