--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -55,7 +55,7 @@ sync_now.icon=icons/toolbar/Sync-48.png
 sync_now_active.icon=icons/toolbar/SyncActive-48.png
 
 # Sync icons for FolderQuickInfoPanel
-sync_0.icon=icons/sync/Sync_00.png
+sync_0.icon=icons/sync/Sync_0000.png
 sync_1.icon=icons/sync/Sync_0001.png
 sync_2.icon=icons/sync/Sync_0002.png
 sync_3.icon=icons/sync/Sync_0003.png
