#404 - Rationalize option dialogs through DialogFactory.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -206,8 +206,10 @@ empty_recycle_bin.name=Empty Recycle Bin
 empty_recycle_bin.working.description=Deleting files
 empty_recycle_bin.working.title=Emptying the Recycle Bin
 
-empty_recycle_bin_confimation.text=Are your sure to want to empty the PowerFolder Recycle Bin?
 empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
+empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
+empty_recycle_bin_confimation.empty=Empty
+empty_recycle_bin_confimation.dont=Do Not Empty
 
 enablesilentmode.description=Disables all heavy tasks, e.g. scanning for changes in folders, thus no disk activity
 enablesilentmode.key=s
@@ -343,13 +345,15 @@ folderpanel.filestab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
 folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
 folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 folderpanel.hometab.choose_local_folder.title=Choose local folder
-folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
-folderpanel.hometab.confirm_local_folder_move.title=Move local folder
-folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
+folderpanel.hometab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
+folderpanel.hometab.confirm_local_folder_move.title=Confirm move
+folderpanel.hometab.folder_not_empty=Folder {0} is not empty.
 folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
-folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
+folderpanel.hometab.move_content=Current folder contents can be moved to the new folder.
+folderpanel.hometab.move_content.move=Move Contents
+folderpanel.hometab.move_content.dont=Do Not Move Contents
 folderpanel.hometab.move_content.title=Move folder contents
 folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
 folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
@@ -416,6 +420,8 @@ general.apply=Apply
 general.availability=Availability
 general.cancel=Cancel
 general.cancel.key=C
+general.continue=Continue
+general.continue.key=C
 general.days={0} days
 general.description=Description
 general.directory=Directory
@@ -665,8 +671,8 @@ preferences.dialog.dyndnsUpdateUnknowError=DynDns service returned an unknown wa
 preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\:
 preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
 preferences.dialog.dyndnsUserName=Username
-preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
-preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host.
+preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.
+preferences.dialog.dyndnsmanager.nomatch.title=DynDns does not match
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Find port
@@ -695,8 +701,9 @@ preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.title=Pro Settings
 preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port.
-preferences.dialog.restarttext=Some changes require PowerFolder to restart.\nDo you want to restart now?\n
-preferences.dialog.restarttitle=Restart requested
+preferences.dialog.restart.title=Restart required
+preferences.dialog.restart.text=Some changes require PowerFolder to restart.
+preferences.dialog.restart.restart=Restart Now
 preferences.dialog.showadvanced=Show Advanced Preferences
 preferences.dialog.showpreviewpanel=Enable internal image preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
@@ -814,7 +821,9 @@ remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=Delete File
 
 remove_pattern.title=Remove ignore pattern
-remove_pattern.prompt=Remove ignore pattern {0}?
+remove_pattern.prompt=Pattern '{0}' will be removed.
+remove_pattern.remove=Remove
+remove_pattern.dont=Do Not Remove
 
 remove_from_recycle_bin_confimation.text=Are you sure you want to delete the following file(s)?
 remove_from_recycle_bin_confimation.title=Delete files?
@@ -984,7 +993,7 @@ wizard.basicsetup.networking=Connect to
 wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basic Setup
 wizard.basicsetup.upload.title=Unlimited connection speed
-wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.\n\nAre you sure this is correct?
+wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.choosedisklocation.select=Select directory
 wizard.choosedisklocation.title=Disk location
 wizard.control.back=< Back
