#611 - Directories detected and displayed to user as radio options.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -985,6 +985,21 @@ unignorefile.description=File(s) will be downloaded/shared again
 unignorefile.key=R
 unignorefile.name=Remove from Ignore pattens
 
+user.dir.contacts=Contacts
+user.dir.desktop=Desktop
+user.dir.documents=Documents
+user.dir.favorites=Favorites
+user.dir.links=Links
+user.dir.music=Music
+user.dir.my_documents=My Documents
+user.dir.my_music=My Music
+user.dir.my_pictures=My Pictures
+user.dir.my_videos=My Videos
+user.dir.pictures=Pictures
+user.dir.recent_documents=Recent Documents
+user.dir.videos=Videos
+user.dir.custom=Custom
+
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
 wizard.basicsetup.enternick=Please enter your nickname
