Partial commit of #434 - Accelerators for Sync Folders, Sync Folder and Cleanup.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -90,7 +90,7 @@ chatpanel.member_disconnected_at_time={0} disconnected at {1}
 chatpanel.member_joined_folder_at_time={0} joined folder at {1}
 chatpanel.member_left_folder_at_time={0} left folder at {1}
 
-clearcompleteddownloads.description=Clears the list of the recently completed downloads
+clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Cleanup
 
@@ -108,7 +108,7 @@ console.updatecheck.new_developmentversion=------------ New development version 
 
 createshortcut.description=Creates a shortcut to this folder on your desktop
 createshortcut.key=D
-createshortcut.name=Create desktop shortcut
+createshortcut.name=Create Desktop Shortcut
 
 delete_confimation.busy.description=Removing file(s)
 delete_confimation.busy.title=Deleting file(s)
@@ -329,7 +329,7 @@ folderjoin.secret=Secret
 folderjoin.warning.notempty.text=The directory for the local copy of folder '{0}' is not empty.\nAll files contained there will be uploaded to its members.\nAre you sure you want to place the local copy of this folder at\n'{1}'?
 folderjoin.warning.notempty.title=Local base directory not empty
 
-folderleave.description=Leave this folder (Stop Sharing and downloading data)
+folderleave.description=Leave this folder (Stop sharing and downloading data)
 folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=The folder is currently synchronizing\!
 folderleave.dialog.text=Leave folder {0}?
@@ -493,7 +493,7 @@ infoside.title=Information
 
 invitationfiles.description=PowerFolder invitations
 
-join_by_invitation.description=Join Folder by Invitation, Load Invitation from disk
+join_by_invitation.description=Joins folder by invitation, loads invitation from disk
 join_by_invitation.key=I
 join_by_invitation.name=Load Invitation
 
@@ -854,11 +854,11 @@ restorefile.name=Restore File
 rootpanel.connected_users=Connected Users
 rootpanel.friends=Friends
 
-scanallfolders.description=Synchronizes all Folders now
+scanallfolders.description=Synchronizes all folders now (F5)
 scanallfolders.key=F
 scanallfolders.name=Sync Folders
 
-scanfolder.description=Checks all folders for file changes now
+scanfolder.description=Checks folder for file changes now (Alt-1)
 scanfolder.key=s
 scanfolder.name=Sync Now
 
