Final commit of #434 - Accelerators for Details and Help.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -895,7 +895,7 @@ showfileinfo.description=Shows detail information about the selected file
 showfileinfo.key=p
 showfileinfo.name=File Properties
 
-showhidefiledetails.description=Shows/Hides detailed information about the selected file
+showhidefiledetails.description=Shows/Hides detailed information about the selected file (Alt-4)
 showhidefiledetails.key=d
 showhidefiledetails.name=Details
 
@@ -1016,6 +1016,11 @@ wizard.control.cancel=Cancel
 wizard.control.finish=Finish
 wizard.control.help=Help
 wizard.control.next=Next >
+wizard.control.back.description=Go to previous wizard step
+wizard.control.cancel.description=Cancel this wizard
+wizard.control.finish.description=Finish this wizard task
+wizard.control.help.description=Show online help (Alt-8)
+wizard.control.next.description=Go to next wizard step
 wizard.description=Opens wizard
 wizard.filesharing.browse=Browse in Public Folders
 wizard.filesharing.browseinfo=To browse in public folders (gray),\nuse the navigation tree on the left side.\nTheir files are shown on the right
