#41 - Firefox and Tbird locations for Vista.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -75,6 +75,9 @@ addmodifierfriend.name=Add file Modifier to Friends
 addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-Range
 
+apps.dir.firefox=Firefox
+apps.dir.thunderbird=Thunderbird
+
 buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
 buypro.name=Buy Pro
