#41 - Add evolution mail option for Linux (Ubuntu).

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -992,6 +992,7 @@ user.dir.contacts=Contacts
 user.dir.desktop=Desktop
 user.dir.documents=Documents
 user.dir.favorites=Favorites
+user.dir.evolution=Evolution
 user.dir.links=Links
 user.dir.music=Music
 user.dir.my_documents=My Documents
