--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -77,6 +77,7 @@ addressEditor.title=IP-Range
 
 apps.dir.firefox=Firefox
 apps.dir.thunderbird=Thunderbird
+apps.dir.outlook=Outlook
 
 buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
