#678 - Add memory monitor task to warn user if max memory is reached.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -51,10 +51,12 @@ about.dialog.version.builddate=Build date\: {0}
 about.dialog.version.buildtime=Build time\: {0}
 about.dialog.version.text=Version\: {0}
 about.dialog.version.title=Version
-about.dialog.yoursystem.java_version=Java Version\: {0}
+about.dialog.yoursystem.java_version=Java version\: {0}
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Screen\: {0}x{1}
 about.dialog.yoursystem.title=Your System
+about.dialog.yoursystem.max=Max memory\: {0}MB
+about.dialog.yoursystem.used=Used memory\: {0}MB
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
 about.key=h
@@ -462,6 +464,7 @@ general.recyclebin=Recycle Bin
 general.seconds=Second(s)
 general.show=show
 general.show_never_again=Do not show this message again
+general.show_never_again.key=D
 general.size=Size
 general.skip=Skip
 general.synchonisation=Synchronization
@@ -507,6 +510,10 @@ joinfolder.already_joined_title=Unable to join {0}
 limitedconnection.dont_autodetect=No longer detect limited connectivity
 limitedconnection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limitedconnection.title=Limited connectivity
+
+lowmemory.dont_autodetect=Do not detect low memory
+lowmemory.text=PowerFolder is running out of available memory.\nHow to increase available memory is answered in our documentation.\nhttp\://docs.powerfolder.com
+lowmemory.title=Low memory
 
 linespeed.T1=T1 (1.544mbit)
 linespeed.T3=T3 (43.232mbit)
@@ -660,6 +667,7 @@ preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
+preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
 preferences.dialog.dyndns=My (dynamic) DNS
 preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
