#678 - Write new ini if original detected. And quit if interrupted.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -512,8 +512,10 @@ limitedconnection.text=PowerFolder has detected limited connectivity to the netw
 limitedconnection.title=Limited connectivity
 
 lowmemory.dont_autodetect=Do not detect low memory
-lowmemory.text=PowerFolder is running out of available memory.\nHow to increase available memory is answered in our documentation.\nhttp\://docs.powerfolder.com
+lowmemory.text=PowerFolder is running out of available memory.\nHow to increase available memory is answered in our documentation.\nhttp\://docs.powerfolder.com\n\nPowerFolder can attempt to increase the available memory.
 lowmemory.title=Low memory
+lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
+lowmemory.configure_failure=PowerFolder was unable to configure additional memory.
 
 linespeed.T1=T1 (1.544mbit)
 linespeed.T3=T3 (43.232mbit)
