I18N for low memory buttons

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -516,6 +516,8 @@ lowmemory.text=PowerFolder is running out of available memory.\nHow to increase 
 lowmemory.title=Low memory
 lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
 lowmemory.configure_failure=PowerFolder was unable to configure additional memory.
+lowmemory.increase=Increase Memory
+lowmemory.do_nothing=Do Nothing
 
 linespeed.T1=T1 (1.544mbit)
 linespeed.T3=T3 (43.232mbit)
