--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -512,10 +512,10 @@ limitedconnection.text=PowerFolder has detected limited connectivity to the netw
 limitedconnection.title=Limited connectivity
 
 lowmemory.dont_autodetect=Do not detect low memory
-lowmemory.text=PowerFolder is running out of available memory.\nHow to increase available memory is answered in our documentation.\nhttp\://docs.powerfolder.com\n\nPowerFolder can attempt to increase the available memory.
+lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
 lowmemory.title=Low memory
 lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
-lowmemory.configure_failure=PowerFolder was unable to configure additional memory.
+lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 lowmemory.increase=Increase Memory
 lowmemory.do_nothing=Do Nothing
 
